compiler/fabc_parser/src/ast/expr/snapshots/fabc_parser__ast__expr__primitive__tests__basic_context.snap
---
source: compiler/fabc_parser/src/ast/expr/primitive.rs
expression: primitive
---
Context {
    info: NodeInfo {
        id: 0,
        span: Span {
            start: LineCol(
                1,
                1,
            ),
            end: LineCol(
                1,
                7,
            ),
        },
    },
}
