compiler/fabc_parser/src/ast/expr/snapshots/fabc_parser__ast__expr__primitive__tests__basic_grouping.snap
---
source: compiler/fabc_parser/src/ast/expr/primitive.rs
expression: primitive
---
Grouping {
    info: NodeInfo {
        id: 2,
        span: Span {
            start: LineCol(
                1,
                1,
            ),
            end: LineCol(
                1,
                3,
            ),
        },
    },
    expr: Primary {
        info: NodeInfo {
            id: 1,
            span: Span {
                start: LineCol(
                    1,
                    2,
                ),
                end: LineCol(
                    1,
                    2,
                ),
            },
        },
        value: Primitive(
            Identifier {
                info: NodeInfo {
                    id: 0,
                    span: Span {
                        start: LineCol(
                            1,
                            2,
                        ),
                        end: LineCol(
                            1,
                            2,
                        ),
                    },
                },
                name: "x",
            },
        ),
    },
}
