compiler/fabc_parser/src/ast/expr/snapshots/fabc_parser__ast__expr__primitive__tests__basic_identifier.snap
---
source: compiler/fabc_parser/src/ast/expr/primitive.rs
expression: primitive
---
Identifier {
    info: NodeInfo {
        id: 0,
        span: Span {
            start: LineCol(
                1,
                1,
            ),
            end: LineCol(
                1,
                3,
            ),
        },
    },
    name: "foo",
}
