compiler/fabc_parser/src/ast/expr/snapshots/fabc_parser__ast__expr__primitive__tests__parses_closure_primitive.snap
---
source: compiler/fabc_parser/src/ast/expr/primitive.rs
expression: primitive
---
Closure {
    info: NodeInfo {
        id: 9,
        span: Span {
            start: LineCol(
                1,
                1,
            ),
            end: LineCol(
                1,
                20,
            ),
        },
    },
    params: [
        Identifier {
            info: NodeInfo {
                id: 0,
                span: Span {
                    start: LineCol(
                        1,
                        2,
                    ),
                    end: LineCol(
                        1,
                        2,
                    ),
                },
            },
            name: "x",
        },
        Identifier {
            info: NodeInfo {
                id: 1,
                span: Span {
                    start: LineCol(
                        1,
                        5,
                    ),
                    end: LineCol(
                        1,
                        5,
                    ),
                },
            },
            name: "y",
        },
    ],
    body: BlockStmt {
        info: NodeInfo {
            id: 8,
            span: Span {
                start: LineCol(
                    1,
                    11,
                ),
                end: LineCol(
                    1,
                    20,
                ),
            },
        },
        first_return: None,
        statements: [
            Expr(
                ExprStmt {
                    info: NodeInfo {
                        id: 7,
                        span: Span {
                            start: LineCol(
                                1,
                                13,
                            ),
                            end: LineCol(
                                1,
                                18,
                            ),
                        },
                    },
                    expr: Binary {
                        info: NodeInfo {
                            id: 6,
                            span: Span {
                                start: LineCol(
                                    1,
                                    13,
                                ),
                                end: LineCol(
                                    1,
                                    17,
                                ),
                            },
                        },
                        left: Primary {
                            info: NodeInfo {
                                id: 3,
                                span: Span {
                                    start: LineCol(
                                        1,
                                        13,
                                    ),
                                    end: LineCol(
                                        1,
                                        13,
                                    ),
                                },
                            },
                            value: Primitive(
                                Identifier {
                                    info: NodeInfo {
                                        id: 2,
                                        span: Span {
                                            start: LineCol(
                                                1,
                                                13,
                                            ),
                                            end: LineCol(
                                                1,
                                                13,
                                            ),
                                        },
                                    },
                                    name: "x",
                                },
                            ),
                        },
                        operator: Add,
                        right: Primary {
                            info: NodeInfo {
                                id: 5,
                                span: Span {
                                    start: LineCol(
                                        1,
                                        17,
                                    ),
                                    end: LineCol(
                                        1,
                                        17,
                                    ),
                                },
                            },
                            value: Primitive(
                                Identifier {
                                    info: NodeInfo {
                                        id: 4,
                                        span: Span {
                                            start: LineCol(
                                                1,
                                                17,
                                            ),
                                            end: LineCol(
                                                1,
                                                17,
                                            ),
                                        },
                                    },
                                    name: "y",
                                },
                            ),
                        },
                    },
                },
            ),
        ],
    },
}
